add styles for mobile and tablet design

--- a/scss/_functions.scss
+++ b/scss/_functions.scss
@@ -1,6 +1,6 @@
 @function set-text-color($bg-color) {
   @if(lightness($bg-color) > 80) {
-    @return $dark-blackish-blue;
+    @return $dark-grayish-blue;
   } @else {
     @return $light-grayish-blue;
   }
